// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnResizing snapshots should render ColumnResizing 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Resizing
      </small>
    </div>
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--two-inputs"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="TextField"
          data-test-text-field="width"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="width"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="width"
            >
              <small
                class="css-1jnxvbp Typography Typography--neutral-2 Typography--regular Typography--normal Typography--small"
                data-test-text=""
                style="text-align: inherit;"
              >
                W
              </small>
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="width"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="fixed-width"
                    height="12"
                    name="FixedWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-width"
                    height="12"
                    name="AutoWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverSeparator"
                />
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="min-width"
                    height="12"
                    name="MinWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Add min width...
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="4"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="max-width"
                    height="12"
                    name="MaxWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Add max width...
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="TextField"
          data-test-text-field="height"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="height"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="height"
            >
              <small
                class="css-1jnxvbp Typography Typography--neutral-2 Typography--regular Typography--normal Typography--small"
                data-test-text=""
                style="text-align: inherit;"
              >
                H
              </small>
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="height"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="fixed-height"
                    height="12"
                    name="FixedHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-height"
                    height="12"
                    name="AutoHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverSeparator"
                />
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="min-height"
                    height="12"
                    name="MinHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Add min height...
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="4"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="max-height"
                    height="12"
                    name="MaxHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Add max height...
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        >
          <div
            class="ButtonIcon"
            data-test-button-icon="aspect-ratio"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral-1"
              data-test-icon="aspect-ratio"
              height="12"
              name="AspectRatio"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Look aspect ratio
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral-1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnResizing snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Resizing
      </small>
    </div>
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--two-inputs"
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="TextField"
          data-test-text-field="width"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--chip TextFieldWrapper--full-width"
            data-test-text-field-wrapper="width"
          >
            <div
              class="ScrubbableInput ScrubbableInput--disabled"
              data-test-scrubbable-input="width"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="width-restricted"
                height="12"
                name="WidthRestricted"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="width"
              maxlength="6"
              type="text"
              value="Mixed"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="detached"
                height="12"
                name="Detached"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="fixed-width"
                    height="12"
                    name="FixedWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-width"
                    height="12"
                    name="AutoWidth"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
            <div
              class="Chip TextFieldWrapper__chip TextFieldWrapper__chip--attached-value TextFieldChip"
              data-test-chip=""
            >
              Mixed
            </div>
          </div>
        </div>
        <div
          class="TextField"
          data-test-text-field="height"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--chip TextFieldWrapper--full-width"
            data-test-text-field-wrapper="height"
          >
            <div
              class="ScrubbableInput ScrubbableInput--disabled"
              data-test-scrubbable-input="height"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral-2"
                data-test-icon="height-restricted"
                height="12"
                name="HeightRestricted"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="height"
              maxlength="6"
              type="text"
              value="Mixed"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="detached"
                height="12"
                name="Detached"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="fixed-height"
                    height="12"
                    name="FixedHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-height"
                    height="12"
                    name="AutoHeight"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
            <div
              class="Chip TextFieldWrapper__chip TextFieldWrapper__chip--attached-value TextFieldChip"
              data-test-chip=""
            >
              Mixed
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
